--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
       "react-app",
       "react-app/jest"
     ]
-  }
   },
   "browserslist": {
     "production": [
@@ -36,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "node-sass": "^4.14.1"
   }
 }
