--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,11 @@
       "strings": true
     },
     "editor.suggest.insertMode": "insert"
-},
-"editor.defaultFormatter": "esbenp.prettier-vscode",
-"editor.formatOnSave": true
-
+  },
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.formatOnSave": true,
+  "javascript.suggest.autoImports": true,
+  "editor.codeActionsOnSave": {
+    "source.organizeImports": true
+  }
 }
