--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "ecmaVersion": 12,
     "sourceType": "module"
   },
-  "plugins": ["react", "prettier"],
+  "plugins": ["react", "prettier", "@babel/plugin-syntax-dynamic-import"],
   "rules": {
     "prettier/prettier": ["error"],
     "react/jsx-filename-extension": [
